pixmapsdir   = $(datadir)/gopenvpn
pixmaps_DATA = gopenvpn-open.png 	\
	   gopenvpn-connecting.png 	\
	   gopenvpn-blink.png 		\
	   gopenvpn-closed.png		\
	   gopenvpn-active.svg		\
	   gopenvpn-inactive.svg	\
	   gopenvpn-processing.svg	\
	   gopenvpn-processing-2.svg
EXTRA_DIST   = $(pixmaps_DATA)
